sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/RESSMO_UI_Input__mdt.object-meta.xml
<CustomObject>
    <description>LEM-16420 Store fields to display on RESSMO UI.</description>
    <label>RESSMO UI Input</label>
    <pluralLabel>RESSMO UI Inputs</pluralLabel>
</CustomObject>