sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/Applicable_For__c.field-meta.xml
<CustomField>
    <fullName>Applicable_For__c</fullName>
    <description>Used to Select if metadata needs to display on Quote or Contract Screen for RESSMO</description>
    <label>Applicable For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
                <default>true</default>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>