sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Store the API Name of field displayed on RESSMO UI Screen on Contract and Quote</description>
    <label>Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>