sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Input_Type__c</fullName>
    <description>Store the Type of Input if Input is Generic and is not used from Record Edit Form to be displayed on RESSMO UI Screen on Contract and Quote</description>
    <label>Input Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>