sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Store the Object API Name if Input is used from Record Edit Form to be displayed on RESSMO UI Screen on Contract and Quote</description>
    <label>Object API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>