sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/OIAttributes__c.field-meta.xml
<CustomField>
    <fullName>OIAttributes__c</fullName>
    <description>points to specific OIAttribute record for a field</description>
    <label>OIAttributes</label>
    <referenceTo>OIAttributes__mdt</referenceTo>
    <relationshipLabel>RESSMO UI Inputs</relationshipLabel>
    <relationshipName>RESSMO_UI_Inputs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>