sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Stores the order of the field in which the input needs to be displayed</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>