sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <description>Store the picklist values in this field by ; Seperated</description>
    <inlineHelpText>Yes;No</inlineHelpText>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>