sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Section on UI under which details needs to be rendered.</description>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Photoshoot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>