sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Input type Simple / Generic Input /Address / [FieldSpecific] /Empty Block to determine input behaviour</description>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>