sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/UI_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>UI_Validation_Message__c</fullName>
    <label>UI Validation Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>