sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <label>Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Required on UI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>