sfdx-source/force-app/main/default/objects/RESSMO_UI_Input__mdt/listViews/All_Inputs_for_Quote.listView-meta.xml
<ListView>
    <fullName>All_Inputs_for_Quote</fullName>
    <columns>MasterLabel</columns>
    <columns>Is_Active__c</columns>
    <columns>Section__c</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Input_Type__c</columns>
    <columns>Input_UI_Label__c</columns>
    <columns>Validation__c</columns>
    <columns>UI_Validation_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Applicable_For__c</field>
        <operation>equals</operation>
        <value>Quote</value>
    </filters>
    <label>All Inputs for Quote</label>
</ListView>